# nn.h

./: CMakeLists.txt
cpp/: adder.cpp  elapsed_timer.hpp  gym.hpp  img2nn.cpp  layout.cpp  nn.hpp  shape.cpp  xor.cpp
